feat OAuthとDiaryのopenapi定義
